Fix header spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,7 @@ body{
     font-weight: 300;
     color: #3a3a3a;
     background: #ccc;
+    line-height: 1.6;
 }
 
  /*navigation and logo styling */
@@ -57,6 +58,7 @@ nav{
     background-color: red;
     clear:both;
     width: 100%;
+    margin: 0.5rem 0.2rem;
 }
 #menu{
     font-size: 110%;
